...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ERz-hQ-ZvT">
                                <rect key="frame" x="20" y="143" width="353" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="pjJ-bD-Psg"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bbC-Qj-I7J">
                                <rect key="frame" x="20" y="195" width="353" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <textInputTraits key="textInputTraits" returnKeyType="next" secureTextEntry="YES"/>
...
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="SignUp">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K7L-St-MK5">
                                <rect key="frame" x="20" y="143" width="353" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="firstNameTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="quI-8q-IdN"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G9R-co-9xs">
                                <rect key="frame" x="20" y="195" width="353" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="lastNameTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="namePhonePad" returnKeyType="next" textContentType="family-name"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kab-YO-PJj">
                                <rect key="frame" x="20" y="351" width="353" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="confirmPasswordTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES"/>
...
                        <viewLayoutGuide key="safeArea" id="gq3-UP-aIY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="dashboardViewController"/>
                        <constraints>
                            <constraint firstItem="JD0-dn-uOO" firstAttribute="centerX" secondItem="tDc-k3-0MH" secondAttribute="centerX" id="9OY-Yr-6R8"/>
...
