...
    }
    
    func errorHandler(error: SignUpError) {
        let alertController = UIAlertController(title: "Error", message: error.errorDescription, preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "Ok", style: .default))
        DispatchQueue.main.async {
            alertController.view.accessibilityIdentifier = "errorAlertController"
            self.present(alertController, animated: true)
        }
    }
    
}

